# taskmanager-sdk

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  openapi.yaml  pyproject.toml  test_script.py
.github/workflows/: ci.yml  precommit.yml  security.yml
taskmanager_sdk/: __init__.py  client.py  exceptions.py  models.py
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_models.py
