[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager-sdk"
version = "0.1.4"
description = "Python SDK for TaskManager API"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "TaskManager SDK", email = "support@brooksmcmillin.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.25.0",
    "typer>=0.16.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
    "mypy",
    "types-requests",
    "ruff",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
]

[project.urls]
Homepage = "https://github.com/brooksmcmillin/taskmanager-sdk"
Documentation = "https://github.com/brooksmcmillin/taskmanager-sdk"
Repository = "https://github.com/brooksmcmillin/taskmanager-sdk"
Issues = "https://github.com/brooksmcmillin/taskmanager-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskmanager_sdk*"]

[tool.setuptools.package-data]
taskmanager_sdk = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
